--- a/main.html
+++ b/main.html
@@ -8,40 +8,42 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<label for="name">Name*</label>
-	<input type="text" id="#name"/>
-	<br/>
-	<br/>
-	<label for="email">Email*</label>
-	<input type="email" id="#email"/>
-	<br/>
-	<br/>
-	<label for="gender">Gender*</label>
-	<input type="radio" id="#gender">Male
-	<input type="radio" id="#gender">Female
-	<br/>
-	<br/>
-	<label for="cars">Car Brands</label>
-	<select id="#cars">
-		<option>BMW</option>
-		<option>Audi</option>
-		<option>Mercedez</option>
-	</select>
-	<br/>
-	<br/>
-	<label for="carage">Car Age*</label>
-	<input type="number" id="#carage" min=1 max=30>
-	<br/>
-	<br/>
-	<label for="dop">Date of Purchase(dop)*</label>
-	<input type="date" id="#dop">
-	<br/>
-	<br/>
-	<label for="password">Password*</label>
-	<input type="password" id="#password">
-	<br/>
-	<br/>
-	<button type="submit">submit</button>
+	<form>
+		<label for="name">Name*</label>
+		<input type="text" id="#name"/>
+		<br/>
+		<br/>
+		<label for="email">Email*</label>
+		<input type="email" id="#email"/>
+		<br/>
+		<br/>
+		<label for="gender">Gender*</label>
+		<input type="radio" id="#gender" name="gender">Male
+		<input type="radio" id="#gender" name="gender">Female
+		<br/>
+		<br/>
+		<label for="cars">Car Brands</label>
+		<select id="#cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<br/>
+		<br/>
+		<label for="carage">Car Age*</label>
+		<input type="number" id="#carage" min=1 max=30>
+		<br/>
+		<br/>
+		<label for="dop">Date of Purchase(dop)*</label>
+		<input type="date" id="#dop">
+		<br/>
+		<br/>
+		<label for="password">Password*</label>
+		<input type="password" id="#password">
+		<br/>
+		<br/>
+		<button type="submit">submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
