--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="get">
 		<label for="name">Name*</label>
-		<input type="text" id="#name"/>
+		<input type="text" id="input#name"/>
 		<br/>
 		<br/>
 		<label for="email">Email*</label>
@@ -23,7 +23,7 @@
 		<br/>
 		<br/>
 		<label for="cars">Car Brands</label>
-		<select id="#cars">
+		<select id="select#cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
@@ -31,15 +31,15 @@
 		<br/>
 		<br/>
 		<label for="carage">Car Age*</label>
-		<input type="number" id="#carage" min=1 max=30>
+		<input type="number" id="input#carage" min=1 max=30>
 		<br/>
 		<br/>
 		<label for="dop">Date of Purchase(dop)*</label>
-		<input type="date" id="#dop">
+		<input type="date" id="input#dop">
 		<br/>
 		<br/>
 		<label for="password">Password*</label>
-		<input type="password" id="#password">
+		<input type="password" id="input#password">
 		<br/>
 		<br/>
 		<button type="submit">submit</button>
